--- a/configs/COCO-Keypoints/gs-keypoint.yaml
+++ b/configs/COCO-Keypoints/gs-keypoint.yaml
@@ -1,6 +1,8 @@
 _BASE_: "keypoint_rcnn_R_101_FPN_3x.yaml"
 SOLVER:
-  IMS_PER_BATCH: 2
+  CHECKPOINT_PERIOD: 250
+  IMS_PER_BATCH: 6
+  MAX_ITER: 15000
   BASE_LR: 0.0025
 DATASETS:
   TRAIN: ("keypoints_coco_gs_train",)
